--- a/iOS/G3MiOSDemo/Glob3iOSDemo/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/iOS/G3MiOSDemo/Glob3iOSDemo/en.lproj/MainStoryboard_iPhone.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--View Controller - PlanarViewerController-->
         <scene sceneID="L0K-S4-ViS">
             <objects>
-                <viewController id="PPz-AV-qzl" customClass="ViewController" sceneMemberID="viewController">
+                <viewController autoresizesArchivedViewToFullSize="NO" title="PlanarViewerController" wantsFullScreenLayout="YES" id="PPz-AV-qzl" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eeF-v6-C69">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,15 +21,73 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <navigationItem key="navigationItem" id="kq5-yS-q5Q"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="G3MWidget" destination="Zho-NO-SYn" id="njm-hw-Nwf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eoy-xD-D1z" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-7" y="-26"/>
+        </scene>
+        <!--PlanarViewerController-->
+        <scene sceneID="JVI-r9-6uf">
+            <objects>
+                <viewController storyboardIdentifier="PlanarViewerController" autoresizesArchivedViewToFullSize="NO" title="PlanarViewerController" id="kGt-bS-Oze" userLabel="PlanarViewerController" customClass="PlanarViewerController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OHP-bG-hED">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" id="aGl-wP-AmO" userLabel="planarWebView">
+                                <rect key="frame" x="0.0" y="45" width="320" height="416"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <dataDetectorType key="dataDetectorTypes"/>
+                            </webView>
+                            <navigationBar contentMode="top" id="4QR-l9-ONf">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="vvr-lg-1yi">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" width="14" id="qYk-XK-Edp" userLabel="backButton"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="BackButton" destination="qYk-XK-Edp" id="hQb-jI-Iaj"/>
+                        <outlet property="backButton" destination="qYk-XK-Edp" id="bUd-65-S9K"/>
+                        <outlet property="navigationBar" destination="4QR-l9-ONf" id="frD-ta-EGG"/>
+                        <outlet property="planarWebView" destination="aGl-wP-AmO" id="Bch-pQ-tXj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6gH-do-fWt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="425" y="-26"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="G3MWidget_iOS" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/G3MWidget_iOS.h"/>
+        </class>
+        <class className="PlanarViewerController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlanarViewerController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="backButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="planarWebView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="G3MWidget" candidateClass="G3MWidget_iOS"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
